Fixed alignment of footer texts

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -123,6 +123,8 @@ footer ul {
 
 footer ul li {
     display: inline;
+    position: relative;
+    top: 6px;
 }
 
 footer ul li a {
